# winml-cli

./: .gitattributes  .gitignore  .pre-commit-config.yaml  42e01e5b-6ec6-11f1-b9ba-78862e4c523d.data  935ad4a2-6eca-11f1-8f52-78862e4c523d.data  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SUPPORT.md  c4a68dbc-4373-11f1-8c4e-000d3ace6c01.data  d95f5c1b-49e9-11f1-b179-000d3ace6c01.data  mkdocs.yml  pyproject.toml  qwen3_quantize.py  qwen3_transformer_only_quantize.py  test_qwen 2.py  test_qwen.py  winml-cli-skill-design.md
.claude/: settings.local.json
.claude/commands/: issue-dashboard.md  run-e2e.md  triage.md
.github/: CODEOWNERS  LICENSE_HEADER.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.yaml
.github/workflows/: codeql.yml  docs.yml  lint.yml  modelkit-ci.yml  verify-rules.yml
.pipelines/: Modelkit E2E Test.yml  Modelkit Eval Report.yml  Modelkit Example Configs Test.yml  inject_ikey.py  modelkit-official-build.yml  modelkit-release-github.yml  modelkit-release-pypi.yml
.pipelines/templates/: e2e-eval-jobs.yml  e2e-test-jobs.yml  eval-report-jobs.yml  example-configs-eval-jobs.yml
.review/: followup-notes.md  pending-issues.md
.superpowers/sdd/: progress.md  review-7fe980ed..a943fc60.diff  review-8c88d423..7fe980ed.diff  task-1-brief.md  task-1-report.md  task-2-brief.md  task-2-report.md
0.1/: 404.html  index.html  sitemap.xml
0.1/Privacy/: index.html
0.1/contributing/: index.html
0.1/reference/: index.html
0.2/: 404.html  index.html  sitemap.xml
amd_examples/: BAAI_bge-base-en-v1.5_sentence-similarity_fp16_config.json  BAAI_bge-base-en-v1.5_sentence-similarity_w8a8_config.json  BAAI_bge-large-en-v1.5_sentence-similarity_w8a8_config.json  Babelscape_wikineural-multilingual-ner_token-classification_w8a8_config.json  Intel_bert-base-uncased-mrpc_text-classification_fp16_config.json  Intel_bert-base-uncased-mrpc_text-classification_w8a8_config.json  deepset_bert-large-uncased-whole-word-masking-squad2_question-answering_w8a16_config.json  deepset_bert-large-uncased-whole-word-masking-squad2_question-answering_w8a8_config.json  dslim_bert-base-NER_token-classification_w8a8_config.json  example.md  facebook_convnext-tiny-224_image-classification_fp16_config.json  facebook_convnext-tiny-224_image-classification_w8a8_config.json  google-bert_bert-base-multilingual-cased_feature-extraction_w8a8_config.json  google-bert_bert-large-uncased-whole-word-masking-finetuned-squad_question-answering_fp16_config.json  google_vit-base-patch16-224_image-classification_fp16_config.json  google_vit-base-patch16-224_image-classification_w8a8_config.json  microsoft_resnet-50_image-classification_w8a16_config.json  microsoft_swin-large-patch4-window7-224_image-classification_fp16_config.json  microsoft_swin-large-patch4-window7-224_image-classification_w8a16_config.json  openai_clip-vit-base-patch16_feature-extraction_w8a8_config.json  openai_clip-vit-base-patch32_feature-extraction_fp16_config.json  sentence-transformers_all-MiniLM-L6-v2_feature-extraction_w8a16_config.json  sentence-transformers_all-MiniLM-L6-v2_feature-extraction_w8a8_config.json  sentence-transformers_all-MiniLM-L6-v2_sentence-similarity_w8a16_config.json  sentence-transformers_paraphrase-multilingual-MiniLM-L12-v2_feature-extraction_w8a8_config.json  sentence-transformers_paraphrase-multilingual-MiniLM-L12-v2_sentence-similarity_fp16_config.json  sentence-transformers_paraphrase-multilingual-MiniLM-L12-v2_sentence-similarity_w8a8_config.json  sentence-transformers_paraphrase-multilingual-mpnet-base-v2_sentence-similarity_w8a16_config.json  w11wo_indonesian-roberta-base-posp-tagger_token-classification_w8a16_config.json
amd_test_results/: RESULTS.md  run_all_tests.bat
amd_test_results_round2/: RESULTS.md  run_all_tests.bat
dev/: 404.html  index.html  sitemap.xml  versions.json
docs/: Privacy.md  README.md  contributing.md  ep-path-design.md  ep-path-msix-source.md  image_to_text_model_design.md  index.md  lora_qnn_investigation.md  naming-convention.md  pytest-best-practices.md  t5_kv_cache_study.md  troubleshooting.md  versions.json
examples/: README.md  SUMMARY.md  eval_summary.md  generate_config.md  print_example_result.py  release-builtin-models.md  run_example_tests.py  summary.md  summary_2.md  summary_builtin_model.md  test_config.md
inference/: lora_loader.py
investigation/: NOTES.md  SUMMARY.md  build_models.py  env_check.py  inspect_graph.py  qnn_common.py  results.json  run_cpu.py  run_qnn_aot.py  run_qnn_jit.py  run_user_script.py  write_results.py
reports/: README.md  download_report.py  model_accuracy_report.html  model_compatibility_report.html
scripts/: README_setup_agent.md  build_coco_keypoints.py  build_eval_summary.py  convert_esrgan_weights.py  download_rules.py  export_qwen3_embeddings_lm_head.py  export_qwen3_transformer_only.py  find_default_pattern_representatives.py  find_default_pattern_representatives_result.json  find_missing_default_patterns_direct.py  find_missing_default_patterns_direct_result.json  find_model_with_three_default_patterns.py  find_model_with_three_default_patterns_result.json  find_qnn_attention_match.py  find_qnn_attention_match_result.json  find_qnn_rule_match_direct.py  find_qnn_rule_match_direct_commit_equivalent.json  find_qnn_rule_match_direct_result.json  find_qnn_rule_match_direct_rule_inclusive.json  generate_example_configs.py  generate_example_report.py  generate_report.py  harvest_perf_from_e2e.py  infer_genai.py  mask_generation_eval.py  materialize_rules_zip.py  mcp_server.py  pick_builtin_recipes.py  post-merge-rules-check.sh  print_example_result.py  qwen3.py  rebuild_examples_summary.py  rebuild_recipes_readme.py  rebuild_summary_builtin_model.py  run_example_tests.py  sam3_decoder_shapes.json  sam3_reference_check.py  sam3_smoke_eval.py  scan_attention_structure.py  scan_attention_structure_result.json  (+1 more)
tests/: CLAUDE.md  README_PIPE_TESTS.md  __init__.py  _helpers.py  conftest.py  test_cli.py  test_cli_spec.py  test_import_time.py  test_text_classification.py
(+12088 files in other folders)
